--- a/style/sass/tech.scss
+++ b/style/sass/tech.scss
@@ -22,7 +22,7 @@
     .tech-info {
         display: flex;
         flex-direction: column;
-        flex-grow: 1 0 auto;
+        flex-grow: 1;
         border-top-right-radius: 1.75rem;
         border-bottom-right-radius: 1.75rem;
         border: solid 4px black;
