--- a/style/site.css
+++ b/style/site.css
@@ -20,9 +20,10 @@
 .tech-card .tech-info {
   display: flex;
   flex-direction: column;
-  flex-grow: 1 0 auto;
+  flex-grow: 1;
   border-top-right-radius: 1.75rem;
   border-bottom-right-radius: 1.75rem;
+  border: solid 4px black;
   background-color: white;
   padding-left: 1rem;
 }
